# synth

./: Cargo.toml
src/: main.rs
synth/: Cargo.toml
synth-module/: Cargo.toml
synth-module-derive/: Cargo.toml
synth-module-derive/src/: attributes.rs  connection_graph.rs  fields.rs  lib.rs
synth-module/src/: lib.rs
synth-module/src/oscillator/: derive.rs  mod.rs  multi.rs
synth-module/src/port/: io.rs  mod.rs
synth-module/src/sequencer/: mod.rs  step.rs
synth-node/: Cargo.toml
synth-node/src/: lib.rs
synth-node/src/branch/: mod.rs  sequential_switch.rs
synth-node/src/ops/: add.rs  mod.rs  mul.rs
synth-node/src/sink/: cpal_mono.rs  mod.rs
synth-node/src/source/: clock.rs  level.rs  mod.rs  saw.rs  sine.rs  square.rs  triangle.rs
synth-node/src/util/: mod.rs  pass_or_default.rs
synth/src/: main.rs
